--- a/aip.tex
+++ b/aip.tex
@@ -70,7 +70,8 @@ TO DO LIST:
 
 \pedro[inline]{
    Should we say ``associated to'' or ``associated with''?
-   We're using the former, but Google Ngram shows that the latter is a lot more popular. 
+   We're using the former, but Google Ngram shows that the latter is a lot more popular.
+\emily[inline]{Either is OK with me.}
 }
 
 \newpage
